Add System.Data.SQLite as Nuget Package
This also upgrades the version from `1.0.115.0` => `1.0.118`

--- a/Portfolio.csproj
+++ b/Portfolio.csproj
@@ -41,11 +41,6 @@
     <Compile Remove="Static\**" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.Data.SQLite">
-      <HintPath>_Dependancies\System.Data.SQLite.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <None Update="Data\PortfolioDatabase.db3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -55,5 +50,8 @@
     <None Update="SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 </Project>
