Organized Orgs/Projects/Tech
Part of fix for issue #9
This makes it easier to build modes/views/etc

--- a/Portfolio.csproj
+++ b/Portfolio.csproj
@@ -19,6 +19,7 @@
 	  <Folder Remove="PublicTemplates\" />
 	  <Folder Remove="PrivateTemplates\" />
 	  <Folder Include="Data\" />
+	  <Folder Include="Portfolio\Data\" />
 	</ItemGroup>
   <ItemGroup>
     <None Include="configs/**">
