Project Restructure Complete
WebServer
 + There are three interfaces for models rather than one
    `IDataModel` used for values when building Views
    `IPageModel` used to return HttpResponses from a class
    `IPageComponentModel` used to render Classes into Views more easily
Portfolio
 + Removed Unused Views/Classes
 + `OrgProjectPageModel` has been merged into `ProjectPageModel`
 + Reorginized and restructured the project to make it more MVC style
 + You can now use models more conviniently now, since the model (if it is a IPageComponentModel) will now be responsible for getting the view, you can still use the model for other Views if needed.
 + DevLog was created, everything including project refrences works, except one-way, projects cannot show DevLogs that mentioned them yet. And posts cannot refer to other posts either.
This closes #9 and #7

--- a/Portfolio.csproj
+++ b/Portfolio.csproj
@@ -19,7 +19,6 @@
 	  <Folder Remove="PublicTemplates\" />
 	  <Folder Remove="PrivateTemplates\" />
 	  <Folder Include="Data\" />
-	  <Folder Include="Portfolio\Data\" />
 	</ItemGroup>
   <ItemGroup>
     <None Include="configs/**">
@@ -37,9 +36,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Portfolio\Data\**" />
     <Compile Remove="PrivateTemplates\**" />
     <Compile Remove="PublicTemplates\**" />
     <Compile Remove="Static\**" />
+    <EmbeddedResource Remove="Portfolio\Data\**" />
+    <None Remove="Portfolio\Data\**" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Data\PortfolioDatabase.db3">
